--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,18 @@
     font-style: normal;
 }
 
-
+@font-face {
+    font-family: 'Metropolis';
+    src: url('../fonts/Metropolis-Medium.eot');
+    src: url('../fonts/Metropolis-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Metropolis-Medium.woff2') format('woff2'),
+    url('../fonts/Metropolis-Medium.woff') format('woff'),
+    url('../fonts/Metropolis-Medium.ttf') format('truetype'),
+    url('../fonts/Metropolis-Medium.svg#Metropolis-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
 
 * {
     padding: 0;
@@ -21,6 +32,10 @@
 img {
     display: block;
     /*width: 100%;*/
+}
+
+body {
+    background-color: grey;
 }
 
 header {
@@ -41,6 +56,7 @@ header .container {
 h1 {
     font-size: 50px;
     font-weight: 400;
+    line-height: 50px;
 }
 
 section {
@@ -122,3 +138,58 @@ section {
 input::placeholder {
     color: #000;
 }
+
+.container {
+    max-width: 1220px;
+    margin: auto;
+    display: flex;
+}
+
+.workouts {
+    background-color: #f1f1f1;
+    padding: 30px 42px 42px 42px;
+}
+
+.all_workouts {
+    display: flex;
+    align-items: center;
+    padding-bottom: 21px;
+    border-bottom: 2px solid #898989;
+    margin-bottom: 33px;
+}
+
+.all_workouts span {
+    margin-right: 26px;
+}
+
+.all_workouts h2 {
+    font-family: Bebas Neue, sans-serif;
+    font-size: 50px;
+    font-weight: normal;
+    margin-right: 66px;
+    line-height: 50px;
+}
+
+.select select {
+    height: 42px;
+    border: none;
+    border-radius: 3px;
+    font-size: 14px;
+    color: #fff;
+    /*background-color: #a1a1a1;*/
+    padding: 0 17px;
+    min-width: 170px;
+    margin-left: 12px;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("../icons/chevrone_down.png") right no-repeat #a1a1a1;
+    background-position-x: calc(100% - 17px);
+    font-family: 'Metropolis', sans-serif;
+}
+
+.select select:first-of-type {
+    margin-left: 0;
+}
+
