--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,6 @@ h1 {
     line-height: 50px;
 }
 
-section {
-    display: flex;
-}
-
 .aside {
     max-width: 240px;
     background-color: #000;
@@ -142,6 +138,9 @@ input::placeholder {
 .container {
     max-width: 1220px;
     margin: auto;
+}
+
+.d-flex {
     display: flex;
 }
 
