--- a/css/style.css
+++ b/css/style.css
@@ -36,28 +36,245 @@ img {
 
 body {
     background-color: grey;
+    font-family: 'Bebas Neue', cursive, sans-serif
 }
 
 header {
-    padding-bottom: 21px;
-    background: url('../img/bg.jpg') top center/cover no-repeat;
-    text-align: center;
-    color: #fff;
-    font-family: Bebas Neue, sans-serif;
+    position: fixed;
+    width: 100%;
+    padding: 25px 0 15px;
+    background-color: rgba(0, 0, 0, 0.65);
+    z-index: 1;
 }
 
 header .container {
     max-width: 1170px;
     margin: auto;
-    padding: 245px 0 30px;
+}
+
+header .container.d-flex {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container.d-flex.border {
+    border-bottom: 2px solid #464646;
+    padding-bottom: 21px;
+    margin-bottom: 22px;
+}
+
+.header_form {
+    height: 42px;
+}
+
+.search_content {
+    max-width: 208px;
+}
+
+.search {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 208px;
+    border-radius: 3px;
+    background-color: #ebebeb;
+    height: 42px;
+    padding: 0 15px;
+}
+
+
+.search_input {
+    background-color: transparent;
+    border: none;
+    width: 75%;
+    font-size: 15px;
+    outline: none;
+}
+
+header input::placeholder {
+    color: #959595;
+}
+
+
+::-webkit-search-cancel-button {
+    display: none;
+}
+
+
+.search-btn {
+    width: 10%;
+    height: 50%;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+
+.btn {
+    display: flex;
+    min-width: 170px;
+    padding: 14px 0;
+    height: 42px;
+    background-color: #252525;
+    font-size: 15px;
+    color: #fff;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    font-family: sans-serif;
+    transition: .4s;
+}
+
+.btn:hover {
+    background-color: #717171;
+}
+
+.btn-icon {
+    margin-right: 14px;
+}
+
+.btn.grey {
+    background-color: #464646;
+}
+
+.btn.grey:hover {
+    background-color: #717171;
+}
+
+.btn.red {
+    background-color: #fa090a;
+}
+
+.btn.red:hover {
+    background-color: #c70000
+}
+
+.container.d-flex.baseline {
+    align-items: baseline;
+}
+
+.menu {
+    display: flex;
+    width: 100%;
+    list-style: none;
+    font-size: 25px;
+    color: #fff;
+    justify-content: space-between;
+    margin-right: 59px;
+}
+
+
+
+.menu-item::after {
+    display: block;
+    content:"";
+    width: 0;
+    height: 4px;
+    background-color: transparent;
+    transition: .4s;
+    margin-top: 5px;
+}
+
+.menu-item:hover::after {
+    width: 100%;
+    background-color: #ff0000;
+}
+
+.menu-link {
+    color: inherit;
+    text-decoration: none;
+    padding: 0 12px;
+}
+
+.menu-link:first-of-type {
+    padding: 0;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-between;
+    min-width: 170px;
+}
+
+.social-link {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    background-color: #fa090a;
+    align-items: center;
+    justify-content: center;
+    transition: .2s linear;
+    text-decoration: none;
+}
+
+i {
+    color: #000;
+    font-size: 24px;
+    transition: .2s linear;
+}
+
+
+.social-link:hover {
+    transform: scale(1.3);
+    border-radius: 10px;
+    -webkit-box-shadow: 1px 1px 12px 1px #363231;
+    box-shadow: 1px 1px 12px 1px #363231;
+    background-color: #ff0000;
+    color: #fff;
+}
+
+.social-link.facebook:hover {
+    background-color: #3b5998;
+}
+
+.social-link:hover  i {
+    color: #fff;
+}
+
+.social-link.twitter:hover {
+    background-color: #00acee;
+}
+
+.social-link.instagram:hover {
+    background: #e570e7;
+
+}
+
+.trainers .container {
+    max-width: 1170px;
+}
+
+.trainers {
+    position: relative;
+    text-align: center;
+    color: #fff;
+}
+
+.trainers img {
+    width: 100%;
+}
+
+section.trainers .container.border.absolute{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    bottom: 25px;
+    padding-bottom: 34px;
     border-bottom: 3px solid #ff0000;
 }
 
 h1 {
     font-size: 50px;
     font-weight: 400;
-    line-height: 50px;
+    font-family: Bebas Neue, sans-serif;
+    line-height: 45px;
 }
+
+
 
 .aside {
     max-width: 240px;
@@ -72,6 +289,7 @@ h1 {
 }
 
 .aside li {
+    padding-left: 25px;
     margin-bottom: 10px;
     transition: .3s;
 }
@@ -85,7 +303,6 @@ h1 {
 }
 
 .aside li a {
-    padding-left: 25px;
     height: 34px;
     display: flex;
     align-items: center;
@@ -191,4 +408,128 @@ input::placeholder {
 .select select:first-of-type {
     margin-left: 0;
 }
+
+.videos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+video {
+    cursor: pointer;
+}
+
+.main_video {
+    margin-bottom: 37px;
+}
+
+.video_item {
+    max-width: 430px;
+    /*padding-bottom: 20px;*/
+    border-bottom: 2px solid #898989;
+}
+
+.video_item a {
+    display: inline-block;
+    background-color: #fa090a;
+}
+
+.video_item img{
+    transition: .3s;
+}
+
+
+.video_item a:hover img{
+    opacity: 60%;
+}
+
+.video_controls {
+    display: flex;
+    align-items: center;
+    padding: 20px 0;
+    /*justify-content: space-between;*/
+}
+
+.video_controls button{
+    cursor: pointer;
+    border: none;
+}
+
+button.far.fa-star {
+    font-size: 17px;
+    margin-right: 17px;
+}
+
+button.active:before {
+    content: "\f005";
+}
+
+.video_controls > span:first-of-type {
+    font-size: 25px;
+    color: #363636;
+    line-height: 21px;
+    margin-right: 100px;
+}
+
+.video_controls > span:last-of-type {
+    font-size: 13px;
+    color: #555555;
+    font-family: 'Metropolis', sans-serif;
+}
+
+
+.toggle-btn
+{
+    position: relative;
+    width: 35px;
+    height: 9px;
+    border-radius: 40px;
+}
+
+input[type="checkbox"]
+{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+}
+
+.toggle-btn span
+{
+    display: block;
+    width: 35px;
+    height: 9px;
+    background-color: #cccccc;
+    border-radius: 20px;
+    transition: 0.4s ease background-color;
+}
+
+.toggle-btn span:before
+{
+    content: '';
+    position: absolute;
+    top: -4px;
+    width: 18px;
+    height: 18px;
+    background-color: #959595;
+    border-radius: 50%;
+    transform: translate(0px,0px);
+    transition: 0.4s ease transform, 0.4s background-color;
+}
+
+
+.toggle-btn input[type="checkbox"]:checked + span:before
+{
+    background-color: #fa090a;
+    transform: translate(20px,0px);
+}
+
 
