--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,21 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Now';
+    src: url('../fonts/Now-Bold.eot');
+    src: url('../fonts/Now-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Now-Bold.woff2') format('woff2'),
+    url('../fonts/Now-Bold.woff') format('woff'),
+    url('../fonts/Now-Bold.ttf') format('truetype'),
+    url('../fonts/Now-Bold.svg#Now-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 * {
     padding: 0;
     margin: 0;
@@ -428,6 +443,7 @@ video {
     max-width: 430px;
     /*padding-bottom: 20px;*/
     border-bottom: 2px solid #898989;
+    margin-bottom: 33px;
 }
 
 .video_item a {
@@ -448,7 +464,7 @@ video {
     display: flex;
     align-items: center;
     padding: 20px 0;
-    /*justify-content: space-between;*/
+    justify-content: space-between;
 }
 
 .video_controls button{
@@ -458,7 +474,7 @@ video {
 
 button.far.fa-star {
     font-size: 17px;
-    margin-right: 17px;
+    /*margin-right: 17px;*/
 }
 
 button.active:before {
@@ -532,4 +548,33 @@ input[type="checkbox"]
     transform: translate(20px,0px);
 }
 
+.list-pages {
+    display: flex;
+    justify-content: space-between;
+    max-width: 120px;
+    margin: auto;
+}
 
+
+.list-pages a {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    text-decoration: none;
+    color: #000;
+    font-size: 10px;
+    text-align: center;
+    border-radius: 50%;
+    line-height: 18px;
+    font-family: 'Now', sans-serif;
+}
+
+.list-pages a.selected {
+    background-color: #fa090a;
+    color: #fff;
+}
+
+.list-pages a i {
+    font-size: 10px;
+    color: #444444;
+}
