--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ video {
 }
 
 .video_item img{
-    transition: .3s;
+    transition: .2s;
 }
 
 
@@ -498,9 +498,9 @@ button.active:before {
 .toggle-btn
 {
     position: relative;
-    width: 35px;
-    height: 9px;
-    border-radius: 40px;
+    /*width: 35px;*/
+    /*height: 9px;*/
+    /*border-radius: 40px;*/
 }
 
 input[type="checkbox"]
@@ -508,11 +508,6 @@ input[type="checkbox"]
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
@@ -549,24 +544,22 @@ input[type="checkbox"]
 }
 
 .list-pages {
-    display: flex;
-    justify-content: space-between;
-    max-width: 120px;
-    margin: auto;
+    text-align: center;
 }
 
 
 .list-pages a {
     display: inline-block;
-    width: 18px;
-    height: 18px;
+    width: 25px;
     text-decoration: none;
     color: #000;
-    font-size: 10px;
+    font-size: 14px;
+    margin: 0 7px;
     text-align: center;
     border-radius: 50%;
-    line-height: 18px;
+    line-height: 25px;
     font-family: 'Now', sans-serif;
+    transition: .2s ease;
 }
 
 .list-pages a.selected {
@@ -574,7 +567,145 @@ input[type="checkbox"]
     color: #fff;
 }
 
+.list-pages a:hover {
+    background-color: #fa090a;
+    color: #fff;
+}
+
 .list-pages a i {
-    font-size: 10px;
+    font-size: 12px;
     color: #444444;
+    transition: .2s ease;
+}
+
+.list-pages a:hover i {
+    color: #fff;
+}
+
+.subscribe {
+    padding: 77px 0 53px;
+    background-color: #010006;
+    color: #fefefe;
+    font-size: 18px;
+    text-align: center;
+
+}
+
+section.subscribe .container {
+    max-width: 890px;
+}
+
+.subscribe-text {
+    margin-bottom: 32px;
+    font-family: sans-serif;
+    text-transform: uppercase;
+}
+
+.subscribe-form {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.subscribe-input {
+    height: 42px;
+    min-width: 390px;
+    padding:  0 26px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    font-size: 17px;
+}
+
+.subscribe-input:focus {
+    background-color: #ebebeb;
+}
+
+.subscribe-btn {
+    height: 51px;
+    background-color: #ff0000;
+    min-width: 309px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 20px;
+    color: #fff;
+    transition: .4s;
+}
+
+.subscribe-btn:hover {
+    background-color: #c70000;
+}
+
+footer {
+    padding-top: 51px ;
+    background-color: #252525;
+    font-family: sans-serif;
+}
+
+footer .container {
+    max-width: 1170px;
+}
+
+.container.d-flex.end {
+    align-items: flex-end;
+    margin-bottom: 65px;
+}
+
+.footer-socials {
+    max-width: 247px;
+    margin-right: 126px;
+}
+
+.logo.footer {
+    display: inline-block;
+    margin-bottom: 44px;
+}
+
+.social-link.footer {
+    width: 42px;
+    height: 42px;
+}
+
+footer i {
+    font-size: 30px;
+}
+
+.footer-menu {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+footer ul {
+    font-size: 13px;
+    list-style: none;
+}
+
+footer ul li {
+    margin-bottom: 20px;
+}
+
+footer ul li:last-of-type  {
+    margin-bottom: 0;
+}
+
+footer ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer ul li a:hover {
+    color: #ff0000;
+    text-decoration: underline;
+}
+
+.footer-divider {
+    height: 64px;
+    background-color: #010006;
+}
+
+.logo.footer img {
+    width: 100%;
 }
