--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,11 @@ header .container.d-flex {
     align-items: center;
     max-width: 208px;
     border-radius: 3px;
-    background-color: #ebebeb;
+    background-color: #fff;
     height: 42px;
     padding: 0 15px;
 }
+
 
 
 .search_input {
@@ -418,6 +419,12 @@ input::placeholder {
     background: url("../icons/chevrone_down.png") right no-repeat #a1a1a1;
     background-position-x: calc(100% - 17px);
     font-family: 'Metropolis', sans-serif;
+    transition: .3s;
+}
+
+.select select:focus {
+    -webkit-box-shadow: -2px -1px 5px 1px rgba(0, 0, 0, 0.56);
+    box-shadow: -2px -1px 5px 1px rgba(0, 0, 0, 0.56);
 }
 
 .select select:first-of-type {
@@ -616,6 +623,7 @@ section.subscribe .container {
     outline: none;
     border: none;
     font-size: 17px;
+    transition: .3s;
 }
 
 .subscribe-input:focus {
